ref(*): simplificación